--- a/ComicList.Lib/packages.config
+++ b/ComicList.Lib/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
   <package id="CsvHelper" version="2.7.0" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="MvvmLight" version="4.2.30.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.3.31.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
