--- a/ComicList/packages.config
+++ b/ComicList/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
   <package id="CsvHelper" version="2.7.0" targetFramework="net45" />
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="MahApps.Metro" version="0.13.1.0" targetFramework="net45" />
   <package id="MvvmLight" version="4.2.30.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.3.31.1" targetFramework="net45" />
