added ability to move comic catalog to any folder to support multi-pc sync with onedrive

--- a/ComicList.Lib/ComicList.Lib.csproj
+++ b/ComicList.Lib/ComicList.Lib.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\ConfigPaths.cs" />
+    <Compile Include="Configuration\SystemCatalog.cs" />
     <Compile Include="Configuration\SystemSettings.cs" />
     <Compile Include="Configuration\UserComicSelection.cs" />
     <Compile Include="Fetcher\ComicEntry.cs" />
