--- a/ComicList/packages.config
+++ b/ComicList/packages.config
@@ -7,5 +7,6 @@
   <package id="MahApps.Metro" version="0.13.1.0" targetFramework="net45" />
   <package id="MvvmLight" version="4.2.30.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.3.31.1" targetFramework="net45" />
+  <package id="Ookii.Dialogs" version="1.0" targetFramework="net45" />
   <package id="Selen.Wpf" version="1.0.0" targetFramework="net45" />
 </packages>
