--- a/ComicList.Lib/packages.config
+++ b/ComicList.Lib/packages.config
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.2.0" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="2.2.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
   <package id="CsvHelper" version="2.7.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="MvvmLight" version="4.2.30.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.3.31.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
+  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
 </packages>
