--- a/ComicList/App.config
+++ b/ComicList/App.config
@@ -1,10 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+
+    <!-- 
+  See https://github.com/nlog/nlog/wiki/Configuration-file 
+  for information on customizing logging rules and outputs.
+   -->
+    <targets>
+      <target xsi:type="File" name="f" fileName="${specialfolder:MyDocuments}/WeeklyComicList/${shortdate}.log"
+            layout="${longdate} ${uppercase:${level}} ${message}" autoFlush="true" maxArchiveFiles="10" archiveEvery="Day" />
+    </targets>
+
+    <rules>
+      <logger name="*" minlevel="Debug" writeTo="f" />
+    </rules>
+  </nlog>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
