--- a/ComicList/packages.config
+++ b/ComicList/packages.config
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.2.0" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="2.2.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
   <package id="CsvHelper" version="2.7.0" targetFramework="net45" />
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net45" />
@@ -9,6 +7,9 @@
   <package id="MahApps.Metro" version="0.13.1.0" targetFramework="net45" />
   <package id="MvvmLight" version="4.2.30.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.3.31.1" targetFramework="net45" />
+  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
+  <package id="NLog.Config" version="3.1.0.0" targetFramework="net45" />
+  <package id="NLog.Schema" version="3.1.0.0" targetFramework="net45" />
   <package id="Ookii.Dialogs" version="1.0" targetFramework="net45" />
   <package id="Selen.Wpf" version="1.0.0" targetFramework="net45" />
 </packages>
