--- a/ComicList/ComicList.csproj
+++ b/ComicList/ComicList.csproj
@@ -144,6 +144,7 @@
     </Compile>
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\OptionsViewModel.cs" />
+    <Compile Include="ViewModel\SelectableEntity.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Compile Include="WeeklyComicListing.xaml.cs">
       <DependentUpon>WeeklyComicListing.xaml</DependentUpon>
